--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <div class="social-media">
             <div class="insta">
                 <a href="https://www.instagram.com/jameskythelusma/">
-                    <img src="img/icon/instagram-svgrepo-com.svg" alt="">
+                    <img src="./img/icon/instagram-svgrepo-com.svg" alt="">
                 </a>
             </div>
             <div class="twitter">
                 <a href="https://twitter.com/jameskythel">
-                    <img src="img/icon/twitter-svgrepo-com (4).svg" alt="">
+                    <img src="./img/icon/twitter-svgrepo-com (4).svg" alt="">
                 </a>
             </div>
             <div class="linkedin">
                 <a href="https://www.linkedin.com/in/jamesky-thelusma-433641176/">
-                    <img src="img/icon/linkedin-svgrepo-com (1).svg" alt="">
+                    <img src="./img/icon/linkedin-svgrepo-com (1).svg" alt="">
                 </a>
             </div>
             <div class="whatsapp">
                 <a href="https://wa.me/32981235">
-                    <img src="img/icon/whatsapp-svgrepo-com.svg" alt="">
+                    <img src="./img/icon/whatsapp-svgrepo-com.svg" alt="">
                 </a>
             </div>
         </div>
@@ -49,21 +49,21 @@
         <div class="linkbox">
             <a href="https://www.behance.net/jameskythelusma18">
                 <div class="link">
-                    <img src="img/icon/link-svgrepo-com.svg" alt="">
+                    <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>My portfolio</p>
                 </div>
             </a>
 
             <a href="https://bit.ly/premyelogomwen">
                 <div class="link">
-                    <img src="img/icon/link-svgrepo-com.svg" alt="">
+                    <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>premyelogomwen fomasyon</p>
                 </div>
             </a>
 
             <a href="https://bit.ly/MennenBrand">
                 <div class="link">
-                    <img src="img/icon/link-svgrepo-com.svg" alt="">
+                    <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>Mennen Brand</p>
                 </div>
             </a>
