--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         </div>
         <div class="social-media">
             <div class="insta">
-                <a href="https://www.instagram.com/jameskythelusma/">
+                <a href="https://www.instagram.com/jameskythelusma/" target="_blank">
                     <img src="./img/icon/instagram-svgrepo-com.svg" alt="">
                 </a>
             </div>
             <div class="twitter">
-                <a href="https://twitter.com/jameskythel">
+                <a href="https://twitter.com/jameskythel" target="_blank">
                     <img src="./img/icon/twitter-svgrepo-com (4).svg" alt="">
                 </a>
             </div>
             <div class="linkedin">
-                <a href="https://www.linkedin.com/in/jamesky-thelusma-433641176/">
+                <a href="https://www.linkedin.com/in/jamesky-thelusma-433641176/" target="_blank">
                     <img src="./img/icon/linkedin-svgrepo-com (1).svg" alt="">
                 </a>
             </div>
             <div class="whatsapp">
-                <a href="https://wa.me/32981235">
+                <a href="https://wa.me/32981235" target="_blank">
                     <img src="./img/icon/whatsapp-svgrepo-com.svg" alt="">
                 </a>
             </div>
@@ -47,21 +47,21 @@
 
     <div class="wrapper">
         <div class="linkbox">
-            <a href="https://www.behance.net/jameskythelusma18">
+            <a href="https://www.behance.net/jameskythelusma18" target="_blank">
                 <div class="link">
                     <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>My portfolio</p>
                 </div>
             </a>
 
-            <a href="https://bit.ly/premyelogomwen">
+            <a href="https://bit.ly/premyelogomwen" target="_blank">
                 <div class="link">
                     <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>premyelogomwen fomasyon</p>
                 </div>
             </a>
 
-            <a href="https://bit.ly/MennenBrand">
+            <a href="https://bit.ly/MennenBrand" target="_blank">
                 <div class="link">
                     <img src="./img/icon/link-svgrepo-com.svg" alt="">
                     <p>Mennen Brand</p>
